# LamaOd

./: .env.example  .gitignore  README.md  env.example  package-lock.json  package.json  requirements.txt
backend/: agent.py  arcgis_catalog_indexer.py  catalog_rag.py  config.py  main.py  message_bridge.py  models.py  pyproject.toml  pytest.ini  rag_registry.py  requirements.txt
backend/docs/: tnufa_agent.md
backend/mocks/: mockTnufaEvents.json  tnufa_mock.py
backend/scripts/: reindex_arcgis_rest_catalog.py
backend/tests/: test_earthquake_query.py  test_rag_tnufa.py  test_tnufa_routing_and_mock.py
backend/tools/: arcgis.py  tnufa.py
docs/: CLOSED-NETWORK-USB.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ExplorerToolUIs.tsx
frontend/src/runtime/: ExplorerChatAdapter.ts  threadToApi.ts
prompts/: snippet-xy-plot-vega-lite.txt  system-prompt-charts-and-diagrams.txt
scripts/: run-pilot.ps1  run-pilot.sh  vendor-wheels.sh
