[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pydantic-ai>=0.0.14",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.32.0",
]
